# DRFProject-OnlineSchool

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  school_data.json
config/: settings.py  urls.py
school/: models.py  serializer.py  tasks.py  tests.py  urls.py  validators.py  views.py
school/management/commands/: fill_school.py
users/: admin.py  models.py  permissions.py  serializer.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py  fill.py  fill_users.py
users/migrations/: 0001_initial.py
